force-app/main/default/objects/Task__c/Task__c.object-meta.xml
<CustomObject>
    <description>An object that details particular instructions for a candidate to complete in order to complete their probation.</description>
    <label>Task</label>
    <nameField>
        <label>Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>