force-app/main/default/objects/Task__c/fields/Completed__c.field-meta.xml
<CustomField>
    <fullName>Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A checkbox to indicate if a task has been completed.</description>
    <label>Completed</label>
    <type>Checkbox</type>
</CustomField>