force-app/main/default/objects/Task__c/fields/Completed_Status__c.field-meta.xml
<CustomField>
    <fullName>Completed_Status__c</fullName>
    <formula>IF ( Completed__c = TRUE, &apos;Completed&apos;,
IF ( TODAY() &gt;  Estimated_Completion_Date__c, &apos;Overdue&apos;, &apos;In Progress&apos;


))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Completed Status</label>
    <type>Text</type>
</CustomField>