force-app/main/default/objects/Task__c/fields/Completion_Status__c.field-meta.xml
<CustomField>
    <fullName>Completion_Status__c</fullName>
    <description>A formula that provides a completion status on a particular task.</description>
    <formula>IF ( Completed__c = TRUE, &apos;Completed&apos;,
IF ( TODAY() &gt;  Estimated_Completion_Date__c , &apos;Overdue&apos;, &apos;In Progress&apos;


))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Completion Status</label>
    <type>Text</type>
</CustomField>