force-app/main/default/objects/Task__c/fields/Estimated_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Completion_Date__c</fullName>
    <formula>Journey__r.Onboarding_Start_Date__c +   Relative_Days_To_Complete__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estimated Completion Date</label>
    <type>Date</type>
</CustomField>