force-app/main/default/objects/Task__c/fields/Requirements__c.field-meta.xml
<CustomField>
    <fullName>Requirements__c</fullName>
    <description>A field that shows the requirements of a specific task set.</description>
    <label>Requirements</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>