force-app/main/default/objects/Task__c/validationRules/Only_Include_Postive_Integers.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_Include_Postive_Integers</fullName>
    <active>true</active>
    <description>A rule that only allows the input of positive integers.</description>
    <errorConditionFormula>Relative_Days_To_Complete__c &lt; 0</errorConditionFormula>
    <errorMessage>Relative days to complete cannot be less than 0.</errorMessage>
</ValidationRule>